--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,7 @@
 //= template/head.html
 
-<style>
-    body{
-        text-align: center;
-    }
-    img{
-        width: 300px;
-    }
-    h1{
-        font-family: sans-serif;
-        font-size: 50px;
-    }
-    
-</style>
-<img src="images/devil.png"/>
-<h1>Frontend Devil</h1>
+<img src="images/devil.png" alt="">
+<h1>Hello World!</h1>
 
 //= template/footer.html
 
